<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="hanlder"
            type="com.manabie.todo.utils.OnClickHandlerInterface" />

        <variable
            name="viewmodel"
            type="com.manabie.todo.ui.task.TaskViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.task.TaskFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:items="@{viewmodel.items}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/create"
            android:onClick="@{(v) -> hanlder.onClick(v)}"
            android:src="@android:drawable/ic_input_add"
            app:backgroundTint="@android:color/holo_orange_light" />

    </FrameLayout>
</layout>