<resources>
    <string name="app_name">Manabie -Mobile Tech Challenge - Long</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_incomplete">Incomplete</string>
    <string name="title_complete">Completed</string>
    <string name="title_task">Task</string>
    <string name="create">Create New Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="task_marked_complete">Task marked complete!</string>
    <string name="empty_task_message">Tasks cannot be empty</string>
    <string name="add_new_task">Add New Task</string>
    <string name="create_new_task_message">Cannot create a new task!</string>
    <string name="update_complete_error_message">Cannot update Task\'s status!</string>
    <string name="not_found_task_error_message">Not found task!</string>
    <string name="btn_ok_alert_dialog">OK</string>
</resources>