<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="task"
            type="com.manabie.todo.data.entities.Task" />

        <variable
            name="viewmodel"
            type="com.manabie.todo.ui.task.TaskViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> viewmodel.openTask(task.id)}"
        android:orientation="horizontal"
        android:padding="@dimen/default_margin">

        <CheckBox
            android:id="@+id/cbComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:onClick="@{(view) -> viewmodel.completeTask(task)}" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@{task.titleForList}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>
</layout>